kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudninja-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cloudninja
  template:
    metadata:
      labels:
        app: cloudninja
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "3000"
    spec:
      containers:
        - name: cloudninja-container
          image: ghcr.io/agl2304/cloudninja_agl:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
