kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudninja-service
spec:
  selector:
    app: cloudninja
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
