kube/networkpolicy-allow-http.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http
spec:
  podSelector:
    matchLabels:
      app: cloudninja
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
      from:
        - podSelector: {}  # Autorise tout le namespace (tu peux restreindre)
